--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,59 @@
+body{
+    background-color:black;
+}
+
+header{
+    .container{
+        width: 100%;
+    }
+    .nav-item {
+        width: 100%;
+        a:hover{
+            color: #0182f9;
+            border-bottom: 8px solid #0182f9;
+            }
+        }
+    }
+
+
+
+.card{
+    flex-basis: calc(100vw/7);
+    background-color: black;
+    color: beige;
+}
+
+footer{
+    color: #fff;
+
+    hr{
+        border: 20px solid #0182f9;
+        margin: 0;
+        margin-top: 20px;
+        color: #0182f9;
+        background-color: #0182f9;
+    }
+    .barra{
+        background-color: #303030;
+        height: 100px;
+        button{
+            border: 2px solid #0182f9;
+            height: 40px;
+        }
+        ul{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: nowrap;
+            list-style: none;
+            li{
+                margin: 0 5px;
+                word-wrap: normal;
+            }
+        }
+    }
+}
+
+
 //
