--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,21 +1,31 @@
+$mdg-blue: #0182f9;
+
 body{
     background-color:black;
+    color: #fff;
+    padding: 0;
 }
 
 header{
     .container{
-        width: 100%;
+
     }
+
+    .navbar{
+        width: 100vw;
+    }
+
     .nav-item {
-        width: 100%;
-        a:hover{
-            color: #0182f9;
-            border-bottom: 8px solid #0182f9;
+        padding: 40% 0;
+        a{
+            height: inherit;
+        &:hover {
+            color: $mdg-blue;
+            border-bottom: 8px solid $mdg-blue;
             }
         }
     }
-
-
+}
 
 .card{
     flex-basis: calc(100vw/7);
@@ -27,24 +37,23 @@ footer{
     color: #fff;
 
     hr{
-        border: 20px solid #0182f9;
+        border: 20px solid $mdg-blue;
         margin: 0;
         margin-top: 20px;
-        color: #0182f9;
-        background-color: #0182f9;
+        color: mdg-blue;
+        background-color: $mdg-blue;
     }
     .barra{
         background-color: #303030;
         height: 100px;
         button{
-            border: 2px solid #0182f9;
+            border: 2px solid $mdg-blue;
             height: 40px;
         }
         ul{
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            align-items: center;
             flex-wrap: nowrap;
             list-style: none;
             li{
